# streamlit_sandbox

./: Dockerfile  README.md  docker-compose.yml  index.json  pyproject.toml  走れメロス.txt
.devcontainer/: devcontainer.json
storage/: .gitignore
streamlit_sandbox/: index.py
streamlit_sandbox/pages/: forms.py  upload.py
