[tool.poetry]
name = "streamlit-sandbox"
version = "0.1.0"
description = ""
authors = ["kurehajime <xiidec@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "streamlit_sandbox"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
